--- a/style.css
+++ b/style.css
@@ -1,8 +1,65 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    text-align: center;
-    
+h1, h2 {
+  text-align: center;
+}
+
+#colorSample {
+  width: 10em;
+  height: 6em;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  font-size: 3em;
+
+  text-shadow: 2px 2px 8px #eee;
+  transition: all 0.5s ease-in-out;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.answer {
+  width: 7em;
+  font-size: 2em;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  border: thin solid black;
+  text-align: center;
+  padding-top: 0.7em;
+  padding-bottom: 0.7em;
+  margin-top: 1em;
+
+  text-shadow: 5px 5px 12px #fff;
+  transition: all 0.5s ease-in-out;
+  z-index: 200;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.full-screen {
+  top: 0 !important;
+  left: 0 !important;
+  width: 100vw !important;
+  height: 100vh !important;
+}
+
+#answerContainer {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.list-one,
+.list-two {
+  flex: 0.1;
+  padding: 10px;
 }
